# my_ai_agent

./: .dockerignore  .gitignore  DEPLOY.md  DOCKER_INSTRUCTIONS.md  Dockerfile  README.md  barge_in_flow.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  server.py  test_grpc_manual.py  test_grpc_stt_client.py
modules/: audio_listener.py  audio_selector.py  flow_logger.py  grpc_stt.py  grpc_translator.py  logger.py  model_selector.py  page.py  translate.py
modules/stt/: base.py  factory.py  vosk_strategy.py  whisper_strategy.py
protos/: stt.proto  stt_pb2.py  stt_pb2_grpc.py  translate.proto  translate_pb2.py  translate_pb2_grpc.py
service/: audio_service.py  ollama_client.py  translator_service.py  tts_stream_client.py  tts_stream_service.py
utils/: listener_test.py
view/: page.py
www/: docker-compose.yml  index.html  nginx.conf
www/static/: main.js  style.css
www/static/css/: control-panel.css  style.css  transcript.css  visualizer.css
www/static/js/: audio-manager.js  barge-in-rms.js  main.js  message-handler.js  processor.js  tts-manager.js  visualizer.js
